--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="percent">  <div style="width: 80%;"></div></div>
                 </div>
                 <div class="box">
-                    <h4>React</h4>
+                    <h4>React js</h4>
                     <div class="percent">  <div style="width: 70%;"></div></div>
                 </div>
                 <div class="box">
@@ -121,6 +121,10 @@
                 <div class="box">
                     <h4>express js</h4>
                     <div class="percent">  <div style="width: 75%;"></div></div>
+                </div>
+                <div class="box">
+                    <h4>SQL Database</h4>
+                    <div class="percent">  <div style="width: 80%;"></div></div>
                 </div>
                 <div class="box">
                     <h4>Dart</h4>
