--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@
                     <div class="percent">  <div style="width: 85%;"></div></div>
                 </div>
                 <div class="box">
+                    <h4>SQL Database</h4>
+                    <div class="percent">  <div style="width: 80%;"></div></div>
+                </div>
+                <div class="box">
                     <h4>SQL server</h4>
                     <div class="percent">  <div style="width: 90%;"></div></div>
                 </div>
                 <div class="box">
                     <h4>express js</h4>
                     <div class="percent">  <div style="width: 75%;"></div></div>
-                </div>
-                <div class="box">
-                    <h4>SQL Database</h4>
-                    <div class="percent">  <div style="width: 80%;"></div></div>
                 </div>
                 <div class="box">
                     <h4>Dart</h4>
@@ -150,10 +150,11 @@
             <li><i class="fa fa-cutlery" aria-hidden="true"></i> Cooking</li>
             <li><i class="fa fa-book" aria-hidden="true"></i> Reading</li>
             <li><i class="fa fa-child" aria-hidden="true"></i> Sporting</li>
-            <li><i class="fa fa-laptop" aria-hidden="true"></i> Programing</li>
+            <li><i class="fa fa-laptop" aria-hidden="true"></i> Programming</li>
         </ul>
      </div>
     </div>
 </div>
 </body>
 </html>
+<!-- add some changes -->
