--- a/index.html
+++ b/index.html
@@ -150,11 +150,10 @@
             <li><i class="fa fa-cutlery" aria-hidden="true"></i> Cooking</li>
             <li><i class="fa fa-book" aria-hidden="true"></i> Reading</li>
             <li><i class="fa fa-child" aria-hidden="true"></i> Sporting</li>
-            <li><i class="fa fa-laptop" aria-hidden="true"></i> Programming</li>
+            <li><i class="fa fa-laptop" aria-hidden="true"></i> Programing</li>
         </ul>
      </div>
     </div>
 </div>
 </body>
 </html>
-<!-- add some changes -->
