--- a/index.html
+++ b/index.html
@@ -1,88 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Website</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+        integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-  
+
     <div class="container">
-    <div class="left_side">
-        <div class="profileText">
-            <div class="imgBx">
-                <img src="me.jpeg">
+        <div class="left_side">
+            <div class="profileText">
+                <div class="imgBx">
+                    <img src="me.jpeg">
+                </div>
+                <h2>Tabarak Ali<br>
+                    <span>SoftWare Developer</span>
+                </h2>
             </div>
-            <h2>Tabarak Ali<br>
-            <span>Web Developer</span></h2>
+            <div class="contactInfo">
+                <h3 class="title">Contact Info</h3>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
+                        <span class="text">07728422106</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
+                        <span class="text">aaltwt49@gmail.com</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-github" aria-hidden="true"></i></span>
+                        <a href="https://github.com/TabarakCodeCraft" style="text-decoration: none;"><span>My
+                                GitHub</span></a>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i></span>
+                        <a href="https://www.linkedin.com/in/tabarak-ali-star/" style="text-decoration: none;"><span
+                                class="text">My linkedin</span></a>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+                        <span class="text">Iraq | Baghdad</span>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="contactInfo education">
+                <h3 class="title">Education</h3>
+                <ul>
+                    <li>
+                        <h5>2018 - 2023</h5>
+                        <h4>Bachelor's in computer scinence</h4>
+                        <h4>University of Baghdad</h4>
+                    </li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="contactInfo education">
+                <h3 class="title">Experiencs</h3>
+                <ul>
+                    <li>
+                        <h5>4 Month</h5>
+                        <h4>internship in PureTik Company</h4>
+                        <h4>Baghdad Kradha 62 St.</h4>
+                    </li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="contactInfo languag">
+                <h3 class="title">Languges</h3>
+                <ul>
+                    <li>
+                        <span class="text">Arabic</span>
+                        <span class="percent">
+                            <div style="width: 96%;"></div>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="text">English</span>
+                        <span class="percent">
+                            <div style="width: 70%;"></div>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="text">Turkish</span>
+                        <span class="percent">
+                            <div style="width: 45%;"></div>
+                        </span>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="contactInfo">
-            <h3 class="title">Contact Info</h3>
-            <ul>
-                <li>
-                    <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
-                    <span class="text">07728422106</span>
-                </li>
-                <li>
-                    <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-                    <span class="text">aaltwt49@gmail.com</span>
-                </li>
-                <li>
-                    <span class="icon"><i class="fa fa-github" aria-hidden="true"></i></span>
-                    <a href="https://github.com/TabarakCodeCraft" style="text-decoration: none;"><span>My GitHub</span></a>
-                </li>
-                <li>
-                    <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i></span>
-                    <a href="https://www.linkedin.com/in/tabarak-ali-star/" style="text-decoration: none;"><span class="text">My linkedin</span></a>
-                </li>
-                <li>
-                    <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-                    <span class="text">Iraq | Baghdad</span>
-                </li>
-            </ul>
-        </div>
- 
-    <div class="contactInfo education">
-        <h3 class="title">Education</h3>
-        <ul>
-           <li>
-            <h5>2018 - 2023</h5>
-           <h4>Bachelor's in computer scinence</h4>
-           <h4>University of Baghdad</h4>
-        </li>
-        </ul>
-    </div>
-<div class="contactInfo languag">
-<h3 class="title">Languges</h3>
-<ul>
-    <li>
-        <span class="text">Arabic</span>
-        <span class="percent">
-            <div style="width: 96%;"></div>
-        </span>
-    </li>
-    <li>
-        <span class="text">English</span>
-        <span class="percent"><div style="width: 70%;"></div></span>
-    </li>
-    <li>
-        <span class="text">Turkish</span>
-        <span class="percent"><div style="width: 45%;"></div></span>
-    </li>
-</ul>
-</div>
-</div>   
-<!-- end of left side to here -->
+        <!-- end of left side to here -->
 
 
-    <div class="right_side">
-        <div class="about">
-            <h2 class="title2">Profile</h2>
-            <p>I am a graduate of computer science.
-                I consider myself a people person
-                Responsible and organized.<br/><br/> I love self-learning in programming in particular, and I am looking forward to my work in full-stack web programming or solving software problems. I consider Freelance, but I am now free to work full-time.</p>
+        <div class="right_side">
+            <div class="about">
+                <h2 class="title2">Profile</h2>
+                <p>I am a graduate of computer science.
+                    I consider myself a people person
+                    Responsible and organized.<br /><br /> I love self-learning in programming in particular, and I am
+                    looking forward to my work in full-stack web programming or solving software problems. I consider
+                    Freelance, but I am now free to work full-time.</p>
             </div>
             <div class="about skills">
                 <h2 class="title2">Skills</h2>
@@ -100,64 +125,91 @@
                 </div>
                 <div class="box">
                     <h4>Java script</h4>
-                    <div class="percent">  <div style="width: 75%;"></div></div>
+                    <div class="percent">
+                        <div style="width: 75%;"></div>
+                    </div>
                 </div>
                 <div class="box">
                     <h4>Node js</h4>
-                    <div class="percent">  <div style="width: 80%;"></div></div>
+                    <div class="percent">
+                        <div style="width: 80%;"></div>
+                    </div>
                 </div>
                 <div class="box">
                     <h4>React js</h4>
-                    <div class="percent">  <div style="width: 70%;"></div></div>
+                    <div class="percent">
+                        <div style="width: 70%;"></div>
+                    </div>
                 </div>
                 <div class="box">
                     <h4>Next js</h4>
-                    <div class="percent">  <div style="width: 85%;"></div></div>
+                    <div class="percent">
+                        <div style="width: 85%;"></div>
+                    </div>
                 </div>
                 <div class="box">
                     <h4>SQL Database</h4>
-                    <div class="percent">  <div style="width: 80%;"></div></div>
+                    <div class="percent">
+                        <div style="width: 80%;"></div>
+                    </div>
                 </div>
                 <div class="box">
                     <h4>SQL server</h4>
-                    <div class="percent">  <div style="width: 90%;"></div></div>
+                    <div class="percent">
+                        <div style="width: 90%;"></div>
+                    </div>
                 </div>
                 <div class="box">
                     <h4>express js</h4>
-                    <div class="percent">  <div style="width: 75%;"></div></div>
+                    <div class="percent">
+                        <div style="width: 75%;"></div>
+                    </div>
                 </div>
                 <div class="box">
                     <h4>Dart</h4>
-                    <div class="percent">  <div style="width: 50%;"></div></div>
+                    <div class="percent">
+                        <div style="width: 50%;"></div>
+                    </div>
                 </div>
                 <div class="box">
                     <h4>Flutter</h4>
-                    <div class="percent">  <div style="width: 40%;"></div></div>
+                    <div class="percent">
+                        <div style="width: 40%;"></div>
+                    </div>
                 </div>
-        </div>
-        <div class="about projects">
-            <h2 class="title2">Web App</h2>
-            <ul>
-                <li><a href="https://star-food-b8w8.vercel.app/" style="text-decoration: none;">Food Ordering</a></li>
-                <li><a href="https://tabarak-point-of-sale.vercel.app/" style="text-decoration: none;">POS System</a></li>
-                <li><a href="https://joyful-griffin-424098.netlify.app/" style="text-decoration: none;">Blog Aon</a></li>
-                <li><a href="https://design-flowers-website.netlify.app/" style="text-decoration: none;">Flowers Site</a></li>
-                <li><a href="  https://car-lover-bytota.netlify.app/" style="text-decoration: none;">Car Sail</a></li>
-                <li><a href="  https://toto-cars-lover.netlify.app/" style="text-decoration: none;">Design App</a></li>
-               
-            </ul>
-        </div>
+            </div>
+            <div class="about projects">
+                <h2 class="title2">Web App</h2>
+                <ul>
+                    <li><a href="https://strong-task-by-toto.netlify.app/" style="text-decoration: none;">Shoppe</a>
+                    </li>
+                    <li><a href="https://design-flowers-website.netlify.app/" style="text-decoration: none;">Flowers
+                            Site</a></li>
+                    <li><a href="https://tabarak-point-of-sale.vercel.app/" style="text-decoration: none;">POS
+                            System</a></li>
+                    <li><a href="https://joyful-griffin-424098.netlify.app/" style="text-decoration: none;">Testing
+                            Blog</a>
+                    </li>
 
-    <div class="about interest">
-        <h2 class="title2">Interest</h2>
-        <ul>
-            <li><i class="fa fa-cutlery" aria-hidden="true"></i> Cooking</li>
-            <li><i class="fa fa-book" aria-hidden="true"></i> Reading</li>
-            <li><i class="fa fa-child" aria-hidden="true"></i> Sporting</li>
-            <li><i class="fa fa-laptop" aria-hidden="true"></i> Programing</li>
-        </ul>
-     </div>
+                    <li><a href="  https://car-lover-bytota.netlify.app/" style="text-decoration: none;">Car website</a>
+                    </li>
+                    <li><a href="  https://toto-cars-lover.netlify.app/" style="text-decoration: none;">Design App</a>
+                    </li>
+
+                </ul>
+            </div>
+
+            <div class="about interest">
+                <h2 class="title2">Interest</h2>
+                <ul>
+                    <li><i class="fa fa-cutlery" aria-hidden="true"></i> Cooking</li>
+                    <li><i class="fa fa-book" aria-hidden="true"></i> Reading</li>
+                    <li><i class="fa fa-child" aria-hidden="true"></i> Sporting</li>
+                    <li><i class="fa fa-laptop" aria-hidden="true"></i> Programing</li>
+                </ul>
+            </div>
+        </div>
     </div>
-</div>
 </body>
+
 </html>
