--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <ul>
             <li>
               <h5>3 Month <span>internship in PureTik Company</span></h5>
-              <h5>4 Month <span>Jonier FullStack in PureTik Company</span></h5>
+              <h5>4 Month <span>junior FullStack in PureTik Company</span></h5>
               <h4>Baghdad Sinaa Street</h4>
               <br/>
             </li>
