--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
         <div class="about projects">
             <h2 class="title2">Skills</h2>
             <ul><li>
-                Task Management : Jira, Azure DevOPs,Trello, linear.
+                Task Management : Jira, Azure DevOPs, Trello, linear.
             </li>
-        <li>Figma : Designed Flowchart, UI/UX</li>
+        <li>Figma : Design logic flow, UI/UX</li>
         <li>Communication skills : Team Leader</li>
         </ul>
         </div>
